compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FunctionWithoutName.java
public abstract interface Foo /* test.Foo*/ {
  @org.jetbrains.annotations.NotNull()
  public abstract java.lang.String foo();//  foo()

  public abstract int <no name provided>();//  <no name provided>()
}
